--- a/style.css
+++ b/style.css
@@ -1,1 +1,35 @@
 
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+.btn {
+  display: inline-block;
+  font-size: 18px;
+  text-align: center;
+  text-decoration: none;
+  margin: 10px;
+  padding: 6px 12px;
+  border-radius: 6px;
+  background-color: purple;
+  border: 1px solid;
+  color: black;;
+}
+
+* {
+  font-family: arial, sans-serif;
+  background-color: #99FF33;
+  text-align: center;
+  list-style-position: inside;
+  font-size: 18px;
+}
+
+img {
+  height: 30%;
+  width: 30%;
+}
+
+.banner {
+  font-size: 22px;
+}
